# Nail_lesion_platform

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
utils/: lesion_predict.py  nail_detect.py
